Decouple CallTree From StackTraceElement