@@ -27,12 +27,10 @@ package co.elastic.apm.agent.profiler;
 import co.elastic.apm.agent.impl.ElasticApmTracer;
 import co.elastic.apm.agent.impl.sampling.ConstantSampler;
 import co.elastic.apm.agent.impl.transaction.TraceContext;
-import co.elastic.apm.agent.matcher.WildcardMatcher;
 import org.junit.jupiter.api.Test;
 
 import java.util.ArrayList;
 import java.util.Arrays;
-import java.util.Collections;
 import java.util.List;
 import java.util.stream.Collectors;
 
@@ -43,10 +41,10 @@ class CallTreeTest {
 
     @Test
     void testCallTree() {
-        CallTree.Root root = CallTree.createRoot(TraceContext.with64BitId(mock(ElasticApmTracer.class)).getTraceContext().copy(), 10, WildcardMatcher.matchAllList(), Collections.emptyList());
-        root.addStackTrace(List.of(asFrame("a")));
-        root.addStackTrace(List.of(asFrame("b"), asFrame("a")));
-        root.addStackTrace(List.of(asFrame("a")));
+        CallTree.Root root = CallTree.createRoot(TraceContext.with64BitId(mock(ElasticApmTracer.class)).getTraceContext().copy(), 10);
+        root.addStackTrace(List.of("a"));
+        root.addStackTrace(List.of("b", "a"));
+        root.addStackTrace(List.of("a"));
         root.end();
 
         System.out.println(root);
@@ -56,13 +54,13 @@ class CallTreeTest {
 
         CallTree a = root.getLastChild();
         assertThat(a).isNotNull();
-        assertThat(a.getFrame().getMethodName()).isEqualTo("a");
+        assertThat(a.getFrame()).isEqualTo("a");
         assertThat(a.getCount()).isEqualTo(3);
         assertThat(a.getChildren()).hasSize(1);
 
         CallTree b = a.getLastChild();
         assertThat(b).isNotNull();
-        assertThat(b.getFrame().getMethodName()).isEqualTo("b");
+        assertThat(b.getFrame()).isEqualTo("b");
         assertThat(b.getCount()).isEqualTo(1);
         assertThat(b.getChildren()).isEmpty();
     }
@@ -150,13 +148,13 @@ class CallTreeTest {
 
     public static CallTree.Root getCallTree(ElasticApmTracer tracer, String[] stackTraces) {
         TraceContext traceContext = rootTraceContext(tracer);
-        CallTree.Root root = CallTree.createRoot(traceContext.getTraceContext().copy(), 10, WildcardMatcher.matchAllList(), Collections.emptyList());
+        CallTree.Root root = CallTree.createRoot(traceContext.getTraceContext().copy(), 10);
         for (int i = 0; i < stackTraces[0].length(); i++) {
-            List<StackTraceElement> trace = new ArrayList<>();
+            List<String> trace = new ArrayList<>();
             for (String stackTrace : stackTraces) {
                 char c = stackTrace.charAt(i);
                 if (!Character.isSpaceChar(c)) {
-                    trace.add(asFrame(Character.toString(c)));
+                    trace.add(Character.toString(c));
                 }
             }
             root.addStackTrace(trace);
@@ -169,9 +167,5 @@ class CallTreeTest {
         TraceContext traceContext = TraceContext.with64BitId(tracer);
         traceContext.asRootSpan(ConstantSampler.of(true));
         return traceContext;
-    }
-
-    public static StackTraceElement asFrame(String method) {
-        return new StackTraceElement("CallTreeTest", method, null, -1);
     }
 }
